Enable check-executables-have-shebangs.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
     -   id: check-yaml
     -   id: check-ast
     -   id: check-case-conflict
-    #-   id: check-executables-have-shebangs
+    -   id: check-executables-have-shebangs
     -   id: check-xml
     -   id: debug-statements
     -   id: check-symlinks
