--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,8 @@ repos:
     -   id: check-xml
     -   id: debug-statements
     -   id: check-symlinks
+- repo: https://github.com/pre-commit/pygrep-hooks
+  rev: v1.7.0
+  hooks:
+  - id: rst-directive-colons
+  - id: rst-inline-touching-normal
