--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -112,6 +112,48 @@ repos:
                tools/set_version.py|
                tools/update_copyright.py
           )$
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.800
+  hooks:
+    - id: mypy
+      # Avoiding PR bloat
+      exclude: |
+          (?x)^(
+              bindings/c/tools/gen_alert_header.py|
+              bindings/c/tools/gen_header.py|
+              bindings/python/client.py|
+              bindings/python/dummy_data.py|
+              bindings/python/make_torrent.py|
+              bindings/python/test.py|
+              docs/filter-rst.py|
+              docs/gen_reference_doc.py|
+              docs/gen_settings_doc.py|
+              docs/gen_stats_doc.py|
+              docs/gen_todo.py|
+              examples/run_benchmarks.py|
+              fuzzers/tools/generate_initial_corpus.py|
+              setup.py|
+              test/http_proxy.py|
+              test/socks.py|
+              test/web_server.py|
+              test/websocket_server.py|
+              tools/benchmark_checking.py|
+              tools/clean.py|
+              tools/copyright.py|
+              tools/dht_flood.py|
+              tools/gen_convenience_header.py|
+              tools/gen_fwd.py|
+              tools/parse_dht_log.py|
+              tools/parse_dht_stats.py|
+              tools/parse_lookup_log.py|
+              tools/parse_peer_log.py|
+              tools/parse_sample.py|
+              tools/parse_session_stats.py|
+              tools/parse_utp_log.py|
+              tools/run_benchmark.py|
+              tools/set_version.py|
+              tools/update_copyright.py
+          )$
 - repo: https://gitlab.com/pycqa/flake8.git
   rev: 3.8.4
   hooks:
