Use pytest for tests

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,15 @@ passenv = *
 # workaround from https://github.com/tox-dev/tox/issues/185
 changedir = bindings/python
 skip_install = true
+deps =
+    pytest
+# Build the wheel to match our environment's python, and install it to the
+# environment.
+# Invocation notes:
+# - python -X dev: this enables a debug allocator which causes bad allocs to
+#   abort immediately, rather than corrupt memory. This has caught several bugs
+#   in the past
 commands =
     {envpython} setup.py bdist_wheel
     {envpython} -m pip install --upgrade --force-reinstall --ignore-installed --find-links=dist python-libtorrent
-    {envpython} test.py
+    {envpython} -X dev -m pytest --log-level=DEBUG --log-cli-level=DEBUG test.py
