Expand test coverage

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,22 @@ deps =
 # - python -X dev: this enables a debug allocator which causes bad allocs to
 #   abort immediately, rather than corrupt memory. This has caught several bugs
 #   in the past
+# - We'd like to use python -W error::DeprecationWarning:tests.*, but this
+#   this example from the docs doesn't work, as the module regex is always
+#   escaped. We can't use a broader -W error::DeprecationWarning because
+#   numerous DeprecationWarnings are fired from builtin code, especially
+#   site.py. We can't use warnings.filterwarnings() in test code because
+#   TestCase.assertWarns() seems to reset these.
+# - It's possible to enable parallelism via pytest-xdist. However in practice:
+#   - It mixes up debug output
+#   - It makes rare crashes harder to trace
+#   - It hides warnings
+#   - As of writing, it only saves about 7 seconds on my machine
+# - Note that multithreading with pytest-parallel doesn't work correctly
+#   because assertWarns isn't threadsafe
+
 commands =
     {envpython} setup.py bdist_wheel
     {envpython} -m pip install --upgrade --force-reinstall --ignore-installed --find-links=dist python-libtorrent
+    {envpython} -m pip install -r test-requirements.txt
     {envpython} -X dev -m pytest --log-level=DEBUG --log-cli-level=DEBUG
