--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,7 +38,9 @@ repos:
       exclude: |
           (?x)^(
             # Enable these later, avoid bloating this PR
-            bindings/python/tests/.*.py|
+            bindings/python/tests/client_test.py|
+            bindings/python/tests/simple_client_test.py|
+            bindings/python/tests/make_torrent_test.py|
             docs/gen_reference_doc.py|
             examples/run_benchmarks.py|
             fuzzers/tools/generate_initial_corpus.py|
@@ -70,7 +72,9 @@ repos:
       # Avoiding PR bloat
       exclude: |
           (?x)^(
-               bindings/python/tests/.*.py|
+               bindings/python/tests/client_test.py|
+               bindings/python/tests/simple_client_test.py|
+               bindings/python/tests/make_torrent_test.py|
                docs/filter-rst.py|
                docs/gen_reference_doc.py|
                docs/gen_settings_doc.py|
@@ -109,7 +113,9 @@ repos:
       # Avoiding PR bloat
       exclude: |
           (?x)^(
-              bindings/python/tests/.*.py|
+              bindings/python/tests/client_test.py|
+              bindings/python/tests/simple_client_test.py|
+              bindings/python/tests/make_torrent_test.py|
               docs/filter-rst.py|
               docs/gen_reference_doc.py|
               docs/gen_settings_doc.py|
@@ -146,7 +152,9 @@ repos:
     exclude: |
         (?x)^(
             # Enable these later, avoid bloating this PR
-            bindings/python/tests/.*.py|
+            bindings/python/tests/client_test.py|
+            bindings/python/tests/simple_client_test.py|
+            bindings/python/tests/make_torrent_test.py|
             docs/gen_todo.py|
             docs/gen_reference_doc.py|
             docs/gen_settings_doc.py|
