Remove some legacy code from setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,6 @@ passenv = *
 changedir = bindings/python
 skip_install = true
 commands =
-    {envpython} setup.py build_ext --libtorrent-link=static --boost-link=static bdist_wheel
+    {envpython} setup.py bdist_wheel
     {envpython} -m pip install --upgrade --find-links=dist python-libtorrent
     {envpython} test.py
