git clone boost and simplifications

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,11 +6,9 @@ on:
    pull_request:
 
 env:
-  BOOST_DOT_VERSION: "1.75.0"
-  BOOST_VERSION: "1_75_0"
   NDK_VERSION: "r21d"
   OPENSSL_VERSION: "1.1.1i"
-  OPENSSL_NO_OPTS: "no-deprecated no-shared no-makedepend"
+  OPENSSL_OPTS: "no-deprecated no-shared no-makedepend -fvisibility=hidden -O3"
 
 jobs:
 
@@ -26,11 +24,11 @@ jobs:
 
       - name: install boost
         run: |
-          wget -nv -O boost.tar.gz https://dl.bintray.com/boostorg/release/${BOOST_DOT_VERSION}/source/boost_${BOOST_VERSION}.tar.gz
-          tar xzf boost.tar.gz
-          mv boost_${BOOST_VERSION} boost
+          git clone --depth=1 --branch=boost-1.75.0 https://github.com/boostorg/boost.git
           cd boost
+          git submodule update --init --depth=1
           ./bootstrap.sh
+          ./b2 headers
           cd ..
 
       - name: install ndk
@@ -39,7 +37,6 @@ jobs:
           unzip -qq android-ndk.zip
           export NDK=${PWD}/android-ndk-${NDK_VERSION}
           ${NDK}/build/tools/make_standalone_toolchain.py --arch arm --api 28 --stl libc++ --install-dir android-toolchain
-          sed -i 's/RANLIB = ranlib/RANLIB = "${PWD}\/android-toolchain\/bin\/arm-linux-androideabi-ranlib"/g' ${PWD}/boost/tools/build/src/tools/gcc.jam
 
       - name: install openssl
         run: |
@@ -49,7 +46,7 @@ jobs:
           wget -nv -O openssl.tar.gz https://www.openssl.org/source/openssl-${OPENSSL_VERSION}.tar.gz
           tar xzf openssl.tar.gz
           cd openssl-${OPENSSL_VERSION}
-          ./Configure linux-armv4 ${OPENSSL_NO_OPTS} -march=armv7-a -mfpu=neon -fPIC --prefix=${PWD}/../openssl
+          ./Configure linux-armv4 ${OPENSSL_OPTS} -march=armv7-a -mfpu=neon -fPIC --prefix=${PWD}/../openssl
           make &> /dev/null
           make install_sw &> /dev/null
           cd ..
@@ -60,14 +57,9 @@ jobs:
           export PATH=${ANDROID_TOOLCHAIN}/arm-linux-androideabi/bin:${PATH}
           export BOOST_ROOT=${PWD}/boost
           export OPENSSL_ROOT=${PWD}/openssl
-          export CXX=${ANDROID_TOOLCHAIN}/bin/arm-linux-androideabi-clang++
-          export CC=${ANDROID_TOOLCHAIN}/bin/arm-linux-androideabi-clang
           echo "boost-build ${BOOST_ROOT}/tools/build/src ;" > boost-build.jam
           echo "using clang-linux : arm : ${ANDROID_TOOLCHAIN}/bin/arm-linux-androideabi-clang++
           <cxxflags>-fPIC
           <cxxflags>-march=armv7-a
-          <cxxflags>-mfpu=neon
-          <cxxflags>-DANDROID
-          <cxxflags>-D__STDC_FORMAT_MACROS
-          <cxxflags>-D_FILE_OFFSET_BITS=64 ;" >>~/user-config.jam;
+          <cxxflags>-mfpu=neon ;" >>~/user-config.jam;
           ${BOOST_ROOT}/b2 warnings-as-errors=on cxxstd=14 toolset=clang-linux-arm target-os=android link=static crypto=openssl openssl-include=${OPENSSL_ROOT}/include openssl-lib=${OPENSSL_ROOT}/lib
