--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,15 +22,10 @@ jobs:
         with:
            submodules: recursive
 
-      # there appears to be a bug in boost-build where referring to a
-      # dependency that's on a different drive fails, deep in boost-build
-      # while concatenating paths
       - name: setup boost
         run: |
-          echo using msvc ; >%HOMEDRIVE%%HOMEPATH%\user-config.jam
-          mklink /J boost %BOOST_ROOT_1_72_0%
-          cd boost
-          b2 headers
+          vcpkg update
+          vcpkg install boost-core boost-asio boost-system boost-build
 
       - name: tests
         run: |
