--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           vcpkg update
           vcpkg install boost-core boost-asio boost-system boost-build
+          vcpkg integrate install
 
       - name: tests
         run: |
