--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -674,6 +674,8 @@ feature_option(python-bindings "build python bindings" OFF)
 feature_option(python-egg-info "generate python egg info" OFF)
 feature_option(python-install-system-dir "Install python bindings to the system installation directory rather than the CMake installation prefix" OFF)
 
+feature_option(iconv "build libtorrent with iconv support" ON)
+
 # these options require existing target
 feature_option(dht "enable support for Mainline DHT" ON)
 target_optional_compile_definitions(torrent-rasterbar PUBLIC FEATURE NAME deprecated-functions DEFAULT ON
@@ -691,20 +693,22 @@ target_optional_compile_definitions(torrent-rasterbar PUBLIC FEATURE NAME mutabl
 target_optional_compile_definitions(torrent-rasterbar PUBLIC FEATURE NAME streaming DEFAULT ON
 	DESCRIPTION "Enables support for piece deadline" DISABLED TORRENT_DISABLE_STREAMING)
 
-find_public_dependency(Iconv)
-if(MSVC)
-	set(iconv_package_type OPTIONAL)
-else()
-	set(iconv_package_type RECOMMENDED)
-endif()
+if(iconv)
+	find_public_dependency(Iconv)
+	if(MSVC)
+		set(iconv_package_type OPTIONAL)
+	else()
+		set(iconv_package_type RECOMMENDED)
+	endif()
 
-set_package_properties(Iconv
-	PROPERTIES
-		URL "https://www.gnu.org/software/libiconv/"
-		DESCRIPTION "GNU encoding conversion library"
-		TYPE ${iconv_package_type}
-		PURPOSE "Convert strings between various encodings"
-)
+	set_package_properties(Iconv
+		PROPERTIES
+			URL "https://www.gnu.org/software/libiconv/"
+			DESCRIPTION "GNU encoding conversion library"
+			TYPE ${iconv_package_type}
+			PURPOSE "Convert strings between various encodings"
+	)
+endif()
 
 if(Iconv_FOUND)
 	target_compile_definitions(torrent-rasterbar PUBLIC TORRENT_USE_ICONV)
