Add simple xNVMe disk_interface for async IOs
The code is not currently "truly async" as it waits on all outstanding
IOs before returning to the caller. The performance should improve
substantially once this behavior is changed to "truly async".

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,8 @@ set(libtorrent_include_files
 	magnet_uri.hpp
 	mmap_disk_io.hpp
 	mmap_storage.hpp
+	xnvme_disk_io.hpp
+	xnvme_storage.hpp
 	natpmp.hpp
 	netlink.hpp
 	operations.hpp
