--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,4 @@ warn_unused_configs = True
 #disallow_any_unimported = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
+mypy_path = bindings/python/install_data
