--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ changedir = bindings/python
 skip_install = true
 deps =
     pytest
+    mypy
 # Build the wheel to match our environment's python, and install it to the
 # environment.
 # Invocation notes:
@@ -33,9 +34,15 @@ deps =
 #   - As of writing, it only saves about 7 seconds on my machine
 # - Note that multithreading with pytest-parallel doesn't work correctly
 #   because assertWarns isn't threadsafe
+# Invocation notes for mypy:
+# - We run this in tox to test the *packaging* of the type stubs. mypy should
+#   be able to find them in the installed environment.
+# - To ensure mypy *only* looks for the packaged type stubs and not the files
+#   in the python directory, only run mypy on the tests dir.
 
 commands =
     {envpython} setup.py bdist_wheel
     {envpython} -m pip install --upgrade --force-reinstall --ignore-installed --find-links=dist python-libtorrent
     {envpython} -m pip install -r test-requirements.txt
     {envpython} -X dev -m pytest --log-level=DEBUG --log-cli-level=DEBUG
+    {envpython} -m mypy --config-file mypy-tox.ini tests
