--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,7 +3,11 @@ name: Android
 on:
    push:
       branches: [ RC_2_0 master ]
+      paths-ignore:
+         - bindings/python/**
    pull_request:
+      paths-ignore:
+         - bindings/python/**
 
 env:
   NDK_VERSION: "r21d"
