--- a/.github/workflows/c.yml
+++ b/.github/workflows/c.yml
@@ -3,7 +3,11 @@ name: C bindings
 on:
    push:
       branches: [ RC_1_2 RC_2_0 master ]
+      paths-ignore:
+         - bindings/python/**
    pull_request:
+      paths-ignore:
+         - bindings/python/**
 
 jobs:
   test:
