--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -67,6 +67,11 @@ jobs:
         run: |
           sudo apt update
 
+      - name: install clang-9
+        continue-on-error: true
+        run: |
+          sudo apt install clang-9
+
       - name: install boost
         run: |
           sudo apt install libboost-tools-dev libboost-dev libboost-system-dev
@@ -153,6 +158,11 @@ jobs:
         continue-on-error: true
         run: |
           sudo apt update
+
+      - name: install clang-9
+        continue-on-error: true
+        run: |
+          sudo apt install clang-9
 
       - name: install boost
         run: |
