CMake: refactor scripts
- refactor macros and create a common interface target
- Enquote non-list variables
- Specify project version directly in the build script instead of
reading from version.hpp.
- correctly specify boost components and minimum required version.
- make all feature setup explicit, not automatic upon finding/not
finding certain dependencies/components.
- get rid of ucm_flags.cmake and associated manual manipulation of
CMAKE_CXX_* variable manipulation
- fix install-time warnings about CMP0007 and CMP0053
- use only target_* commands to propagate build and usage requirements,
don't use any directory-scope commands.
- simplify feature selection
- make use of generator expressions to help better structure the main
build script. The main build script is now roughly structured as
follows:
    1. feature declaration/setup
    2. find required dependency packages
    3. main target configuration: `add_library(...)` followed by
`target_*(...)` commands to configure its compile features, options,
definitions, etc. We strive to call each `target_*(...)` command only
once or as few times as possible, so that each logical property of the
build (compile options, compile definitions, ...) can be contained in a
single place, hopefully making things easier to find and thus the build
script easier to maintain.
    4. optional build of bindings
    5. install configuration
    6. optional build of tools, examples, and tests

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -76,11 +76,13 @@ endif()
 target_link_libraries(python-libtorrent
 	PRIVATE
 		torrent-rasterbar
+		libtorrent_common_cfg
 		"Boost::${boost-python-module-name}"
 )
 
 # Bindings module uses deprecated libtorrent features, thus we disable these warnings
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+	include(CheckCXXCompilerFlag)
 	check_cxx_compiler_flag("-Wno-deprecated-declarations" _WNO_DEPRECATED_DECLARATIONS)
 	if (_WNO_DEPRECATED_DECLARATIONS)
 		target_compile_options(python-libtorrent PRIVATE -Wno-deprecated-declarations)
