--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,22 +1,22 @@
 project(libtorrent-examples)
 
 set(single_file_examples
-    simple_client
-    custom_storage
-    stats_counters
-    dump_torrent
-    make_torrent
-    connection_tester
-    upnp_test)
+	simple_client
+	custom_storage
+	stats_counters
+	dump_torrent
+	make_torrent
+	connection_tester
+	upnp_test)
 
 foreach(example ${single_file_examples})
-    add_executable(${example} "${example}.cpp")
-    target_link_libraries(${example} PRIVATE torrent-rasterbar)
+	add_executable(${example} "${example}.cpp")
+	target_link_libraries(${example} PRIVATE torrent-rasterbar libtorrent_common_cfg)
 endforeach(example)
 
 add_executable(client_test
-    client_test.cpp
-    print.cpp
-    torrent_view.cpp
-    session_view.cpp)
-target_link_libraries(client_test PRIVATE torrent-rasterbar)
+	client_test.cpp
+	print.cpp
+	torrent_view.cpp
+	session_view.cpp)
+target_link_libraries(client_test PRIVATE torrent-rasterbar libtorrent_common_cfg)
