--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(dht dht_put.cpp)
-target_link_libraries(dht PRIVATE torrent-rasterbar)
+target_link_libraries(dht PRIVATE torrent-rasterbar libtorrent_common_cfg)
 
 add_executable(session_log_alerts session_log_alerts.cpp)
-target_link_libraries(session_log_alerts PRIVATE torrent-rasterbar)
+target_link_libraries(session_log_alerts PRIVATE torrent-rasterbar libtorrent_common_cfg)
