CMake: fix propagation of dependencies in MinGW/MSYS2 environments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -606,6 +606,8 @@ target_link_libraries(torrent-rasterbar
 		$<$<AND:$<BOOL:${openssl}>,$<NOT:$<BOOL:${libgcrypt}>>>:OpenSSL::Crypto>
 		# -- Threads --
 		Threads::Threads
+		# -- Windows (MSYS2/MinGW only) --
+		"$<$<OR:$<BOOL:${MSYS}>,$<BOOL:${MINGW}>>:mswsock;ws2_32>"
 	PRIVATE
 		libtorrent_common_cfg
 		# -- Iconv --
