CMake: further refactor feature options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,38 +17,45 @@ include(LibtorrentMacros)
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>$<$<NOT:$<BOOL:${static_runtime}>>:DLL>")
 
 # -- Features --
-feature_option(build_tests "build tests" OFF)
-feature_option(build_examples "build examples" OFF)
-feature_option(build_tools "build tools" OFF)
-feature_option(python-bindings "build python bindings" OFF)
-feature_option(python-egg-info "generate python egg info" OFF)
-feature_option(python-install-system-dir "Install python bindings to the system installation directory rather than the CMake installation prefix" OFF)
-feature_option(iconv "build libtorrent with iconv support" ON)
-feature_option(openssl "Build with OpenSSL, to provide HTTPS support to libtorrent" ON)
-feature_option(libgcrypt "Use LibGcrypt instead of OpenSSL or the built-in functions for RC4 and SHA1" OFF)
-feature_option(dht "enable support for Mainline DHT" ON)
-feature_option(encryption "Enables encryption in libtorrent" ON)
-feature_option(exceptions "build with exception support" ON)
-feature_option(deprecated-functions "enable deprecated functions for backwards compatibility" ON)
-feature_option(extensions "Enables protocol extensions" ON)
-feature_option(i2p "build with I2P support" ON)
-feature_option(logging "build with logging" ON)
-feature_option(mutable-torrents "Enables mutable torrent support" ON)
-feature_option(streaming "Enables support for piece deadline" ON)
-feature_option(BUILD_SHARED_LIBS "build libtorrent as a shared library" ON)
-feature_option(static_runtime "build libtorrent with static runtime" OFF)
-feature_option(developer-options "Activates advanced options useful for a developer" OFF)
+feature_option(NAME build_tests DESCRIPTION "build tests" DEFAULT OFF)
+feature_option(NAME build_examples DESCRIPTION "build examples" DEFAULT OFF)
+feature_option(NAME build_tools DESCRIPTION "build tools" DEFAULT OFF)
+feature_option(NAME python-bindings DESCRIPTION "build python bindings" DEFAULT OFF)
+feature_option(NAME python-egg-info DESCRIPTION "generate python egg info" DEFAULT OFF)
+feature_option(NAME python-install-system-dir DESCRIPTION "Install python bindings to the system installation directory rather than the CMake installation prefix" DEFAULT OFF)
+feature_option(NAME iconv DESCRIPTION "build libtorrent with iconv support" DEFAULT ON)
+feature_option(NAME openssl DESCRIPTION "Build with OpenSSL, to provide HTTPS support to libtorrent" DEFAULT ON)
+feature_option(NAME libgcrypt DESCRIPTION "Use LibGcrypt instead of OpenSSL or the built-in functions for RC4 and SHA1" DEFAULT OFF)
+feature_option(NAME dht DESCRIPTION "enable support for Mainline DHT" DEFAULT ON)
+feature_option(NAME encryption DESCRIPTION "Enables encryption in libtorrent" DEFAULT ON)
+feature_option(NAME exceptions DESCRIPTION "build with exception support" DEFAULT ON)
+feature_option(NAME deprecated-functions DESCRIPTION "enable deprecated functions for backwards compatibility" DEFAULT ON)
+feature_option(NAME extensions DESCRIPTION "Enables protocol extensions" DEFAULT ON)
+feature_option(NAME i2p DESCRIPTION "build with I2P support" DEFAULT ON)
+feature_option(NAME logging DESCRIPTION "build with logging" DEFAULT ON)
+feature_option(NAME mutable-torrents DESCRIPTION "Enables mutable torrent support" DEFAULT ON)
+feature_option(NAME streaming DESCRIPTION "Enables support for piece deadline" DEFAULT ON)
+feature_option(NAME BUILD_SHARED_LIBS DESCRIPTION "build libtorrent as a shared library" DEFAULT ON)
+feature_option(NAME static_runtime DESCRIPTION "build libtorrent with static runtime" DEFAULT OFF)
+feature_option(NAME developer-options DESCRIPTION "Activates advanced options useful for a developer" DEFAULT OFF)
 if (developer-options)
-	feature_option(asio-debugging "Enable boost-asio debugging" OFF)
-	feature_option(picker-debugging "Enable piece picker debugging" OFF)
-	feature_option(debug-iterators "Enable iterator debugging" OFF)
-	feature_option(utp-log "Enable μTP logging" OFF)
-	feature_option(simulate-slow-read "Enable slow read simulation" OFF)
-	feature_option(profile-calls "Enable call profiling" OFF)
-	set(asserts "auto" CACHE STRING "use assertions (only effective in Debug configuration)")
-	set_property(CACHE asserts PROPERTY STRINGS "auto" "off" "on" "production" "system")
-	set(invariant-checks "off" CACHE STRING "enable invariant checks")
-	set_property(CACHE invariant-checks PROPERTY STRINGS "off" "on" "full")
+	feature_option(NAME asio-debugging DESCRIPTION "Enable boost-asio debugging" DEFAULT OFF)
+	feature_option(NAME picker-debugging DESCRIPTION "Enable piece picker debugging" DEFAULT OFF)
+	feature_option(NAME debug-iterators DESCRIPTION "Enable iterator debugging" DEFAULT OFF)
+	feature_option(NAME utp-log DESCRIPTION "Enable μTP logging" DEFAULT OFF)
+	feature_option(NAME simulate-slow-read DESCRIPTION "Enable slow read simulation" DEFAULT OFF)
+	feature_option(NAME profile-calls DESCRIPTION "Enable call profiling" DEFAULT OFF)
+	feature_option_multivalue(NAME "asserts" DESCRIPTION "use assertions (only effective in \"Debug\" configuration)" DEFAULT "auto" ALLOWED_VALUES "auto" "off" "on" "production" "system")
+	feature_option_multivalue(NAME "invariant-checks" DESCRIPTION "enable invariant checks" DEFAULT "off" ALLOWED_VALUES "off" "on" "full")
+else()
+	unset(asio-debugging CACHE)
+	unset(picker-debugging CACHE)
+	unset(debug-iterators CACHE)
+	unset(utp-log CACHE)
+	unset(simulate-slow-read CACHE)
+	unset(profile-calls CACHE)
+	unset(asserts CACHE)
+	unset(invariant-checks CACHE)
 endif()
 
 # -- Find dependencies --
@@ -793,3 +800,4 @@ if(build_tests)
 endif()
 
 feature_summary(DEFAULT_DESCRIPTION WHAT ALL)
+feature_summary_multivalue(NAMES MULTIVALUE_FEATURE_NAMES DEFAULTS MULTIVALUE_FEATURE_DEFAULTS)
