--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -49,6 +49,7 @@ Python3_add_library(python-libtorrent MODULE WITH_SOABI
 	src/entry.cpp
 	src/error_code.cpp
 	src/fingerprint.cpp
+	src/info_hash.cpp
 	src/ip_filter.cpp
 	src/magnet_uri.cpp
 	src/module.cpp
@@ -56,6 +57,7 @@ Python3_add_library(python-libtorrent MODULE WITH_SOABI
 	src/session.cpp
 	src/session_settings.cpp
 	src/sha1_hash.cpp
+	src/sha256_hash.cpp
 	src/string.cpp
 	src/torrent_handle.cpp
 	src/torrent_info.cpp
